# ICS

./: .gitignore  bun.lockb  index.html  package.json  vite.config.js
src/: App.vue  main.js  punto_diesel.db  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs  output.rs  schema.rs
src/components/: Budget.vue  Calendar.vue  Client.vue  CreateBudget.vue  CreateCustomer.vue  CreateItem.vue  CreateVehicle.vue  CreateWorker.vue  Detail.vue  Item.vue  Menu.vue  Movement.vue  Order.vue  Payment.vue  Vehicle.vue  Worker.vue
src/views/: Balance.vue  Budgets.vue  Customers.vue  History.vue  Inventory.vue  Orders.vue  Vehicles.vue  Workers.vue  Works.vue
